// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abc-resource-view__field Should render view field of type approvers < _maxSize 1`] = `
<abc-resource-view__field
  approvers={
    Array [
      Object {
        "is_dismissed": false,
        "login": "zomb-prj-282",
        "name": Object {
          "ru": "Гермес Конрад",
        },
      },
    ]
  }
  label="label"
  type="approvers"
>
  <div
    className="ta-component abc-resource-view__field abc-resource-view__field_type_approvers"
    data-lego="react"
    style={Object {}}
  >
    <abc-resource-view__label
      key="label"
      label="abc-resource-view__field:label"
    >
      <div
        className="ta-component abc-resource-view__label"
        data-lego="react"
        style={Object {}}
      >
        abc-resource-view__field:label
      </div>
    </abc-resource-view__label>
    <abc-resource-view__value
      key="value"
    >
      <div
        className="ta-component abc-resource-view__value"
        data-lego="react"
        style={Object {}}
      >
        <popup2
          anchor={[Function]}
          autoclosable={true}
          directions={
            Array [
              "bottom-left",
              "bottom-center",
              "bottom-right",
              "top-left",
              "top-center",
              "top-right",
              "right-top",
              "right-center",
              "right-bottom",
              "left-top",
              "left-center",
              "left-bottom",
            ]
          }
          hiding={true}
          key="popup"
          mix={
            Object {
              "block": "abc-resource-view",
              "elem": "popup",
              "mods": Object {},
            }
          }
          onAfterClose={[Function]}
          onAfterOpen={[Function]}
          onBeforeClose={[Function]}
          onBeforeOpen={[Function]}
          onOutsideClick={[Function]}
          secondaryOffset={0}
          tailOffset={0}
          target="anchor"
          theme="normal"
          view="classic"
          visible={false}
          zIndexGroupLevel={0}
        />
        <ta-username
          dismissed={false}
          href="//staff.yandex-team.ru/zomb-prj-282"
          key="approver-zomb-prj-282"
          username="zomb-prj-282"
        >
          <link
            attrs={
              Object {
                "ref": Object {
                  "current": <a
                    class="control link link_theme_black ta-username"
                    data-lego="react"
                    href="//staff.yandex-team.ru/zomb-prj-282"
                    tabindex="0"
                    target="_blank"
                  >
                    <span
                      class="ta-component ta-username__logo"
                      data-lego="react"
                    >
                      Г
                    </span>
                    ермес Конрад
                  </a>,
                },
              }
            }
            mix={
              Array [
                Object {
                  "block": "ta-username",
                  "mods": Object {
                    "__entities": Object {
                      "chief": Object {
                        "ta-username$undefined": true,
                      },
                      "dismissed": Object {
                        "ta-username$undefined": true,
                      },
                    },
                    "chief": undefined,
                    "dismissed": false,
                  },
                },
                undefined,
              ]
            }
            onClick={[Function]}
            tabIndex="0"
            target="_blank"
            theme="black"
            url="//staff.yandex-team.ru/zomb-prj-282"
          >
            <a
              className="control link link_theme_black ta-username"
              data-lego="react"
              href="//staff.yandex-team.ru/zomb-prj-282"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              style={Object {}}
              tabIndex="0"
              target="_blank"
            >
              <ta-username__logo>
                <span
                  className="ta-component ta-username__logo"
                  data-lego="react"
                  style={Object {}}
                >
                  Г
                </span>
              </ta-username__logo>
              ермес Конрад
            </a>
          </link>
        </ta-username>
      </div>
    </abc-resource-view__value>
  </div>
</abc-resource-view__field>
`;

exports[`abc-resource-view__field Should render view field of type approvers = 0 1`] = `
<abc-resource-view__field
  approvers={Array []}
  label="label"
  type="approvers"
>
  <div
    className="ta-component abc-resource-view__field abc-resource-view__field_type_approvers"
    data-lego="react"
    style={Object {}}
  >
    <abc-resource-view__label
      key="label"
      label="abc-resource-view__field:label"
    >
      <div
        className="ta-component abc-resource-view__label"
        data-lego="react"
        style={Object {}}
      >
        abc-resource-view__field:label
      </div>
    </abc-resource-view__label>
    <abc-resource-view__value
      key="value"
    >
      <div
        className="ta-component abc-resource-view__value"
        data-lego="react"
        style={Object {}}
      >
        <link
          attrs={
            Object {
              "ref": Object {
                "current": <span
                  class="control link link_theme_pseudo abc-resource-view__no-one-link"
                  data-lego="react"
                  role="button"
                  tabindex="0"
                >
                  abc-resource-view__field:value-no-one
                </span>,
              },
            }
          }
          mix={
            Object {
              "block": "abc-resource-view",
              "elem": "no-one-link",
              "mods": Object {},
            }
          }
          onClick={[Function]}
          pseudo={true}
          tabIndex="0"
          theme="pseudo"
        >
          <span
            className="control link link_theme_pseudo abc-resource-view__no-one-link"
            data-lego="react"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            role="button"
            style={Object {}}
            tabIndex="0"
          >
            abc-resource-view__field:value-no-one
          </span>
        </link>
        <popup2
          anchor={[Function]}
          directions={
            Array [
              "top-center",
            ]
          }
          hasTail={true}
          key="noOnePopup"
          mix={
            Object {
              "block": "abc-resource-view",
              "elem": "no-one-popup",
              "mods": Object {},
            }
          }
          onAfterClose={[Function]}
          onAfterOpen={[Function]}
          onBeforeClose={[Function]}
          onBeforeOpen={[Function]}
          onOutsideClick={[Function]}
          secondaryOffset={0}
          tailOffset={0}
          target="anchor"
          theme="normal"
          view="classic"
          visible={false}
          zIndexGroupLevel={0}
        />
      </div>
    </abc-resource-view__value>
  </div>
</abc-resource-view__field>
`;

exports[`abc-resource-view__field Should render view field of type approvers > _maxSize 1`] = `
<abc-resource-view__field
  approvers={
    Array [
      Object {
        "is_dismissed": false,
        "login": "zomb-prj-282",
        "name": Object {
          "ru": "Гермес Конрад",
        },
      },
      Object {
        "is_dismissed": false,
        "login": "zomb-prj-283",
        "name": Object {
          "ru": "Гермес Конрад",
        },
      },
      Object {
        "is_dismissed": false,
        "login": "zomb-prj-284",
        "name": Object {
          "ru": "Гермес Конрад",
        },
      },
    ]
  }
  label="label"
  type="approvers"
>
  <div
    className="ta-component abc-resource-view__field abc-resource-view__field_type_approvers"
    data-lego="react"
    style={Object {}}
  >
    <abc-resource-view__label
      key="label"
      label="abc-resource-view__field:label"
    >
      <div
        className="ta-component abc-resource-view__label"
        data-lego="react"
        style={Object {}}
      >
        abc-resource-view__field:label
      </div>
    </abc-resource-view__label>
    <abc-resource-view__value
      key="value"
    >
      <div
        className="ta-component abc-resource-view__value"
        data-lego="react"
        style={Object {}}
      >
        <popup2
          anchor={[Function]}
          autoclosable={true}
          directions={
            Array [
              "bottom-left",
              "bottom-center",
              "bottom-right",
              "top-left",
              "top-center",
              "top-right",
              "right-top",
              "right-center",
              "right-bottom",
              "left-top",
              "left-center",
              "left-bottom",
            ]
          }
          hiding={true}
          key="popup"
          mix={
            Object {
              "block": "abc-resource-view",
              "elem": "popup",
              "mods": Object {},
            }
          }
          onAfterClose={[Function]}
          onAfterOpen={[Function]}
          onBeforeClose={[Function]}
          onBeforeOpen={[Function]}
          onOutsideClick={[Function]}
          secondaryOffset={0}
          tailOffset={0}
          target="anchor"
          theme="normal"
          view="classic"
          visible={false}
          zIndexGroupLevel={0}
        />
        <ta-username
          dismissed={false}
          href="//staff.yandex-team.ru/zomb-prj-282"
          key="approver-zomb-prj-282"
          username="zomb-prj-282"
        >
          <link
            attrs={
              Object {
                "ref": Object {
                  "current": <a
                    class="control link link_theme_black ta-username"
                    data-lego="react"
                    href="//staff.yandex-team.ru/zomb-prj-282"
                    tabindex="0"
                    target="_blank"
                  >
                    <span
                      class="ta-component ta-username__logo"
                      data-lego="react"
                    >
                      Г
                    </span>
                    ермес Конрад
                  </a>,
                },
              }
            }
            mix={
              Array [
                Object {
                  "block": "ta-username",
                  "mods": Object {
                    "__entities": Object {
                      "chief": Object {
                        "ta-username$undefined": true,
                      },
                      "dismissed": Object {
                        "ta-username$undefined": true,
                      },
                    },
                    "chief": undefined,
                    "dismissed": false,
                  },
                },
                undefined,
              ]
            }
            onClick={[Function]}
            tabIndex="0"
            target="_blank"
            theme="black"
            url="//staff.yandex-team.ru/zomb-prj-282"
          >
            <a
              className="control link link_theme_black ta-username"
              data-lego="react"
              href="//staff.yandex-team.ru/zomb-prj-282"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              style={Object {}}
              tabIndex="0"
              target="_blank"
            >
              <ta-username__logo>
                <span
                  className="ta-component ta-username__logo"
                  data-lego="react"
                  style={Object {}}
                >
                  Г
                </span>
              </ta-username__logo>
              ермес Конрад
            </a>
          </link>
        </ta-username>
        <ta-username
          dismissed={false}
          href="//staff.yandex-team.ru/zomb-prj-283"
          key="approver-zomb-prj-283"
          username="zomb-prj-283"
        >
          <link
            attrs={
              Object {
                "ref": Object {
                  "current": <a
                    class="control link link_theme_black ta-username"
                    data-lego="react"
                    href="//staff.yandex-team.ru/zomb-prj-283"
                    tabindex="0"
                    target="_blank"
                  >
                    <span
                      class="ta-component ta-username__logo"
                      data-lego="react"
                    >
                      Г
                    </span>
                    ермес Конрад
                  </a>,
                },
              }
            }
            mix={
              Array [
                Object {
                  "block": "ta-username",
                  "mods": Object {
                    "__entities": Object {
                      "chief": Object {
                        "ta-username$undefined": true,
                      },
                      "dismissed": Object {
                        "ta-username$undefined": true,
                      },
                    },
                    "chief": undefined,
                    "dismissed": false,
                  },
                },
                undefined,
              ]
            }
            onClick={[Function]}
            tabIndex="0"
            target="_blank"
            theme="black"
            url="//staff.yandex-team.ru/zomb-prj-283"
          >
            <a
              className="control link link_theme_black ta-username"
              data-lego="react"
              href="//staff.yandex-team.ru/zomb-prj-283"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              style={Object {}}
              tabIndex="0"
              target="_blank"
            >
              <ta-username__logo>
                <span
                  className="ta-component ta-username__logo"
                  data-lego="react"
                  style={Object {}}
                >
                  Г
                </span>
              </ta-username__logo>
              ермес Конрад
            </a>
          </link>
        </ta-username>
        <link
          attrs={
            Object {
              "ref": Object {
                "current": <span
                  class="control link link_theme_pseudo abc-resource-view__link"
                  data-lego="react"
                  role="button"
                  tabindex="0"
                >
                  ...
                </span>,
              },
            }
          }
          key="link"
          mix={
            Object {
              "block": "abc-resource-view",
              "elem": "link",
              "mods": Object {},
            }
          }
          onClick={[Function]}
          pseudo={true}
          tabIndex="0"
          theme="pseudo"
        >
          <span
            className="control link link_theme_pseudo abc-resource-view__link"
            data-lego="react"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            role="button"
            style={Object {}}
            tabIndex="0"
          >
            ...
          </span>
        </link>
      </div>
    </abc-resource-view__value>
  </div>
</abc-resource-view__field>
`;
